--- a/Resume.html
+++ b/Resume.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Resume</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<head>
+<title>FoC</title>
+<link rel="stylesheet" href="style.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 
@@ -74,3 +76,14 @@ I am a student at the best univeristy in the world <a href="https://www.ub.edu.b
 
 </body>
 </html>
+
+
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <p>Click here to see my javavscript: <a href="file:///C:/Users/2022157513/Desktop/HTML/javascript.html">Javascript!</a></p>
